# hpccourse

./: README.md
NVIDIA_CUDA-8.0_Samples/0_Simple/simpleMPI/: testMPICUDA.sh
NVIDIA_CUDA-8.0_Samples/utilities/deviceQuery/: testGPU.sh
Notebooks/Module10/.ipynb_checkpoints/: Prefix Sum-checkpoint.ipynb  Template-checkpoint.ipynb
Notebooks/Module10/A Work-Efficient Parallel Scan Kernel/: A Work-Efficient Parallel Scan Kernel.ipynb
cudaexamples/vecadd/: vecadd.cu
imageconvolution/: CMakeLists.txt  imageconvolution.cu
imageconvolution/cachememconvolution/: CMakeLists.txt  cachememconvolution.cu
imageconvolution/globalmemconvolution/: CMakeLists.txt  imageconvolution.cu
imageconvolution/opencvtest/: CMakeLists.txt  opencvgpu.cpp
imageconvolution/scripts/: script.sh
imageconvolution/sharememconvolution/: CMakeLists.txt  sharememconvolution.cu
imagegrayscale/: CMakeLists.txt  imagegrayscale.cu
matrixmul/: CMakeLists.txt  README.md  compileogs.sh  runogs.sh  simpleMatrixMult.cu
matrixmultiled/: CMakeLists.txt  README.md  compileogs.sh  matrixMulTiled.cu  runogs.sh
mpiexamples/: mpi_hello_world.sh
mpiexamples/check_status/: check_status  check_status.sh  res_check_status.out
mpiexamples/mpi_cuda_hello_world/: README.md  compilation  hostfile  mpi_cuda_hello_world.c  mpi_cuda_hello_world.cu  mpi_cuda_hello_world.sh  res_mpi_cuda_hello_world.out  someDefinitions.h
mpiexamples/mpi_hello_world/: hostfile  mpi_hello_world.c  mpi_hello_world.sh
mpiexamples/mpi_mm/: mpi_mm.sh
mpiexamples/ping_pong/: ping_pong.sh
mpiexamples/probe/: probe.sh
mpiexamples/ring/: ring.sh
mpiexamples/send_recv/: send_recv.sh
opencv/: CMakeLists.txt  DisplayImage.cpp
openmexamples/: README.md
openmexamples/omp_hello/: omp_hello.sh
openmexamples/omp_mm/: omp_mm.c  omp_mm.sh
openmexamples/omp_reduction/: omp_reduction.c  omp_reduction.sh
openmexamples/omp_workshare1/: omp_workshare1.sh
openmexamples/omp_workshare2/: omp_workshare2.c  omp_workshare2.sh
slurmexamples/: slurmexample1.sh  slurmexample2.sh
(+57 files in other folders)
