cmake_minimum_required(VERSION 2.8)
project( ImageConvolution )
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3; -arch=compute_52)
cuda_add_executable( imageconvolution imageconvolution.cu )
target_link_libraries( imageconvolution ${OpenCV_LIBS} )
